2015-01-25
	Added timer func support
	Improved syntax error messages
	Remove dependence on malloc_usable_size
	Pass TRUE as an argument to PAUSE to wait for an event

2015-01-18
	Anti-aliased line drawing
	Improved INPUT with clipboard handling
	Improved graphics display performance

2014-12-03
	File-open now uses .bas DIR to locate files

2014-11-06
	Added WINDOW system object to control the ansiwidget
	Added sound support to SDL port

2014-10-28
	Update INKEY to return ALT, CTRL, ALT+CTRL key information

2014-10-20
	Refactor FORM handling to use system object

2014-09-28
	Refactor image handling to use system object

2014-09-22
	Implemented ARRAY command to read JSON into a map variable

2014-09-19
	Fix STR(v) support for map variables

2014-09-12
	Add support for unary operators on array elements
	Fix printing UDS vars

2014-09-08
	Fix call FUNC with (arg1), (arg2)
	Fix INKEY Backspace in FLTK
	Fix FOR/NEXT using float increments

2014-09-06
	RTE command renamed THROW

2014-09-01
	Added try/catch

2014-08-30
	Added reference variable type
	Fixed HASH var handling with parenthesis

2014-08-22
	Fix HASH var crash
	Fix HASH var handling of mixed types
	Fix illegal UDS field variable names
	Unitfy HASH and UDS

2014-08-15
	Improved runtime performance
	Fixed memory leak with UDS variables
	Fixed FUNC call with parenthesis

2014-08-14
	Added SHOWPAGE. code cleanup

2014-08-11
	Cleanup system var handling, removed os_ver

2014-08-09
	Renamed command "#UNIT-PATH:" to "UNITPATH"
	Renamed command "#INC:" to "INCLUDE"
	Fixed/implemented INCLUDE command
	Refactored comp_pass_1 function is scan.c breaking into
	smaller helper functions

2014-07-07
	Update SDL to use SDL2 and common widget

2014-06-14
	Fix crash evaluating "a \\ b"
	Fix INPUT command in FLTK for scrolled display

2014-06-11
	Android changes:
	- Run by URL/QrCode.
	- Implemented BEEP/SOUND
	- Screen layout adjusts when virtual keypad displayed

2014-04-20
	Released Windows version 0.11.5

2013-12-30